--- a/index.html
+++ b/index.html
@@ -3,144 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Енергозбереження: Внесок кожного учня</title>
+    <title>Таємниці Всесвіту</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
-            color: #333;
+            background-color: #121212;
+            color: #f5f5f5;
+            line-height: 1.6;
         }
         header {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #1a1a1a;
+            color: #00bcd4;
             text-align: center;
             padding: 20px 0;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
         }
         header h1 {
             margin: 0;
+            font-size: 2.5rem;
         }
         nav {
-            text-align: center;
             margin-top: 10px;
         }
         nav a {
             margin: 0 15px;
+            color: #00bcd4;
             text-decoration: none;
-            color: white;
             font-weight: bold;
         }
+        nav a:hover {
+            text-decoration: underline;
+        }
         .container {
-            max-width: 800px;
-            margin: auto;
-            background: white;
+            max-width: 900px;
+            margin: 20px auto;
             padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            background-color: #1f1f1f;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
         }
         h2 {
-            color: #4CAF50;
+            color: #00bcd4;
         }
         ul {
             padding-left: 20px;
         }
+        ul li {
+            margin: 10px 0;
+        }
         .button {
-            display: inline-block;
+            display: block;
+            text-align: center;
             padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
+            background-color: #00bcd4;
+            color: #121212;
+            font-weight: bold;
             text-decoration: none;
             border-radius: 5px;
+            margin: 20px auto;
+            width: 200px;
             text-align: center;
-            margin-top: 20px;
         }
         .button:hover {
-            background-color: #45a049;
-        }
-        .interactive {
-            margin: 20px 0;
-            text-align: center;
-        }
-        .interactive button {
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .interactive button:hover {
-            background-color: #45a049;
-        }
-        .answer {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #e8f5e9;
-            border: 2px solid #4CAF50;
-            border-radius: 5px;
-            display: none;
-            text-align: center;
+            background-color: #0097a7;
         }
         footer {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #1a1a1a;
             text-align: center;
+            color: #999;
             padding: 10px 0;
             margin-top: 20px;
+            font-size: 0.9rem;
+        }
+        footer a {
+            color: #00bcd4;
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Енергозбереження: Внесок кожного учня</h1>
+        <h1>Таємниці Всесвіту</h1>
         <nav>
-            <a href="#about">Про проект</a>
-            <a href="#ideas">Ідеї</a>
-            <a href="#gallery">Галерея</a>
+            <a href="#about">Про космос</a>
+            <a href="#secrets">Таємниці</a>
+            <a href="#contact">Контакти</a>
         </nav>
     </header>
 
     <div class="container">
         <section id="about">
-            <h2>Про проект</h2>
-            <p>Енергозбереження – це не лише зменшення витрат, але й крок до збереження нашої планети. Цей проект спрямований на підвищення свідомості учнів про важливість раціонального використання ресурсів.</p>
+            <h2>Про космос</h2>
+            <p>Всесвіт – це загадковий простір, наповнений зірками, планетами та незвіданими явищами. Він настільки великий, що навіть сучасні технології не можуть дослідити його повністю.</p>
         </section>
 
-        <section id="ideas">
-            <h2>Основні ідеї</h2>
+        <section id="secrets">
+            <h2>Цікаві факти та таємниці</h2>
             <ul>
-                <li>Замінити лампи на енергозберігаючі.</li>
-                <li>Встановити датчики руху для освітлення в коридорах.</li>
-                <li>Запровадити сортування відходів.</li>
-                <li>Популяризувати ідеї енергозбереження серед учнів.</li>
+                <li>У центрі нашої галактики є чорна діра, маса якої в мільйони разів перевищує масу Сонця.</li>
+                <li>У Сонячній системі є планети з дощами з алмазів, як-от Нептун і Уран.</li>
+                <li>Найгарячіша зірка у Всесвіті має температуру близько 200 000°C.</li>
+                <li>Світло від найближчої до Землі зірки (Проксима Центавра) йде до нас 4,2 роки.</li>
             </ul>
         </section>
 
-        <section id="gallery">
-            <h2>Галерея</h2>
-            <p>Тут можна розмістити фотографії роботи над проектом, ілюстрації чи схеми. Ви можете додати їх пізніше.</p>
-        </section>
-
-        <div class="interactive">
-            <button id="question-button">Як я можу допомогти?</button>
-            <div class="answer" id="answer">
-                <p><strong>Порада:</strong> Завжди вимикайте світло, коли воно не потрібне, та використовуйте повторно папір для чернеток!</p>
-            </div>
-        </div>
+        <a href="#contact" class="button">Дізнатися більше</a>
     </div>
 
     <footer>
-        <p>Автор сайту: Назар Козаногін</p>
+        <p>Автор сайту: Назар Козаногін. Дізнайтеся більше про нас <a href="#about">тут</a>.</p>
     </footer>
-
-    <script>
-        const button = document.getElementById('question-button');
-        const answer = document.getElementById('answer');
-        button.addEventListener('click', () => {
-            answer.style.display = answer.style.display === 'none' ? 'block' : 'none';
-        });
-    </script>
 </body>
 </html>
